<resources>
    <string name="app_name">Физика</string>
    <string name="title_activity_mechanics">Mechanics</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="todo">TODO</string>
    <string name="title_activity_mft">Mft</string>
    <string name="title_activity_eam">Eam</string>
    <string name="title_activity_vaw">Vaw</string>
    <string name="kin_1">Скорость равномерного движения:</string>
    <string name="kin_2">Средняя скорость пути (определение):</string>
    <string name="kin_3">Средняя скорость перемещения (определение):</string>
    <string name="kin_4">Средняя скорость при равноускоренном движении (через начальную и конечную скорости):</string>
    <string name="kin_5">Ускорение тела (определение):</string>
    <string name="kin_6">Мгновенная скорость при равноускоренном движении:</string>
    <string name="kin_7">Перемещение при равноускоренном движении:</string>
    <string name="kin_8">Перемещение при равноускоренном движении (без времени):</string>
    <string name="kin_9">Перемещение при равноускоренном движении (без ускорения):</string>
    <string name="kin_10">Координата при равноускоренном движении:</string>
    <string name="kin_11">Скорость, с которой упадет тело, падающее с высоты h без начальной скорости:</string>
    <string name="kin_12">Время падения тела, падающего с высоты h без начальной скорости:</string>
    <string name="kin_13">Максимальная высота подъема тела, брошенного вертикально вверх с начальной скоростью v0:</string>
    <string name="kin_14">Время подъёма этого тела на максимальную высоту:</string>
    <string name="kin_15">Общее время полета этого тела:</string>
    <string name="kin_16">Тормозной путь:</string>
    <string name="kin_17">Дальность полета тела, брошенного горизонтально с начальной высоты H:</string>
    <string name="kin_18">Время падения этого тела:</string>
    <string name="kin_19">Полная скорость этого тела в произвольный момент времени:</string>
    <string name="kin_20">Угол наклона скорости этого тела к горизонту:</string>
    <string name="kin_21">Угловая скорость (определение):</string>
    <string name="kin_22">Период, выраженный через количество оборотов и время:</string>
    <string name="kin_23">Частота, выраженная через количество оборотов и время:</string>
    <string name="kin_24">Взаимосвязь периода и частоты:</string>
    <string name="kin_25">Взаимосвязь частоты и угловой скорости:</string>
    <string name="kin_26">Связь линейной и угловой скоростей:</string>
    <string name="kin_27">Связь угловой скорости и периода:</string>
    <string name="kin_28">Выражение линейной скорости через период:</string>
    <string name="kin_29">Выражение линейной скорости через частоту:</string>
    <string name="kin_30">Центростремительное ускорение (без угловой скорости):</string>
    <string name="kin_31">Центростремительное ускорение (без линейной скорости):</string>
    <string name="kin_32">Центростремительное ускорение (без радиуса):</string>
    <string name="din_1">Второй закон Ньютона:</string>
    <string name="din_2">Равнодействующая сила:</string>
    <string name="din_3">Третий закон Ньютона:</string>
    <string name="din_4">Сила тяжести:</string>
    <string name="din_5">Сила трения скольжения:</string>
    <string name="din_6">Сила трения скольжения при движении по наклонной плоскости (движение происходит только под действием силы трения и силы тяжести):</string>
    <string name="din_7">Тело тянут по горизонтальной плоскости, прикладывая силу F под углом α над горизонтом. Сила трения равна:</string>
    <string name="din_8">Тело тянут по горизонтальной плоскости, прикладывая силу F под углом α под горизонтом. Сила трения равна:</string>
    <string name="din_9">Ускорение тела опускающегося вдоль наклонной плоскости под действием силы трения и силы тяжести:</string>
    <string name="din_10">Телу толчком сообщили скорость вверх вдоль наклонной плоскости. Дальнейшее движение происходит под действием сил трения и тяжести. Ускорение этого тела:</string>
    <string name="din_11">Сила упругости (закон Гука):</string>
    <string name="din_12">Параллельное соединение пружин. Общая жесткость:</string>
    <string name="din_13">Последовательное соединение пружин. Общая жесткость:</string>
    <string name="din_14">Тело тянут по горизонтальной плоскости, прикладывая силу F под углом α над горизонтом. Вес тела равен:</string>
    <string name="din_15">Тело тянут по горизонтальной плоскости, прикладывая силу F под углом α под горизонтом. Вес тела равен:</string>
    <string name="din_16">Вес в лифте, ускорение которого направлено вверх:</string>
    <string name="din_17">Вес в лифте, ускорение которого направлено вниз:</string>
    <string name="din_18">Вес внутри автомобиля или самолета, ускорения которых направлено горизонтально:</string>
    <string name="din_19">Вес летчика в нижней точке мертвой петли (или вес тела равномерно вращающегося на нити в вертикальной плоскости в нижней точке траектории):</string>
    <string name="din_20">Вес летчика в верхней точке мертвой петли (или вес тела равномерно вращающегося на нити в вертикальной плоскости в верхней точке траектории):</string>
    <string name="din_21">Перегрузка (определение):</string>
    <string name="din_22">Закон всемирного тяготения:</string>
    <string name="din_23">Ускорение свободного падения через параметры планеты (вблизи поверхности планеты):</string>
    <string name="din_24">Ускорение свободного падения на высоте h:</string>
    <string name="din_25">Скорость спутника на круговой орбите на высоте h от поверхности планеты:</string>
    <string name="din_26">Первая космическая скорость (скорость движения спутника по орбите вблизи поверхности планеты):</string>
    <string name="din_27">Закон Кеплера для периодов обращение T1 и T2 двух тел вращающихся вокруг одного притягивающего центра на расстояниях R1 и R2 соответственно:</string>
    <string name="gid_1">Сила Архимеда:</string>
    <string name="gid_2">Плотность (определение):</string>
    <string name="gid_3">Давление произвольной силы (определение давления):</string>
    <string name="gid_4">Гидростатическое давление столба жидкости:</string>
    <string name="gid_5">Давление на глубине h в открытом сосуде:</string>
    <string name="gid_6">Давление силы, направленной под углом α к поверхности:</string>
    <string name="gid_7">Сила давления столба жидкости на дно сосуда:</string>
    <string name="gid_8">Сила давления столба жидкости на боковую стенку сосуда:</string>
    <string name="gid_9">Связь сил в гидравлическом прессе, действующих на разные поршни (через площади, пресс - идеальный):</string>
    <string name="gid_10">Вес подвешенного на нити тела, погруженного в жидкость равен:</string>
    <string name="gid_11">Вес тела, погруженного в жидкость и лежащего на дне равен:</string>
    <string name="zsm_1">Работа силы (определение):</string>
    <string name="zsm_2">Работа силы тяжести при движении вверх на высоту H:</string>
    <string name="zsm_3">Работа силы тяжести при движении вниз с высоты H:</string>
    <string name="zsm_4">Работа силы упругости:</string>
    <string name="zsm_5">Работа силы трения:</string>
    <string name="zsm_6">Работа нормальной реакции опоры:</string>
    <string name="zsm_7">Мощность (определение):</string>
    <string name="zsm_8">Мгновенная мощность:</string>
    <string name="zsm_9">Средняя мощность:</string>
    <string name="zsm_10">Потенциальная энергия тела поднятого над землёй:</string>
    <string name="zsm_11">Потенциальная энергия упругой деформации:</string>
    <string name="zsm_12">Кинетическая энергия:</string>
    <string name="zsm_13">Импульс тела (определение):</string>
    <string name="zsm_14">Общий импульс системы тел:</string>
    <string name="zsm_15">Взаимосвязь величины равнодействующей силы и изменения импульса:</string>
    <string name="zsm_16">Кинетическая энергия, выраженная через импульс:</string>
    <string name="zsm_17">Кинетическая энергия, формула без массы:</string>
    <string name="zsm_18">КПД (определение, выразить в долях):</string>
    <string name="zsm_19">Тело на стержне длины L совершает полный оборот. Минимальная скорость в нижней точке равна:</string>
    <string name="zsm_20">Тело на нити длины L совершает полный оборот. Минимальная скорость в нижней точке равна:</string>
    <string name="mft_1">Химическое количество вещества находится по одной из формул:</string>
    <string name="mft_2">Масса одной молекулы вещества может быть найдена по следующей формуле:</string>
    <string name="mft_3">Связь массы, плотности и объёма:</string>
    <string name="mft_4">Основное уравнение молекулярно-кинетической теории (МКТ) идеального газа:</string>
    <string name="mft_5">Определение концентрации задаётся следующей формулой:</string>
    <string name="mft_6">Для средней квадратичной скорости молекул имеется две формулы:</string>
    <string name="mft_7">Средняя кинетическая энергия поступательного движения одной молекулы:</string>
    <string name="mft_8">Постоянная Больцмана, постоянная Авогадро и универсальная газовая постоянная связаны следующим образом:</string>
    <string name="mft_9">Следствия из основного уравнения МКТ:</string>
    <string name="mft_10">Уравнение состояния идеального газа (уравнение Клапейрона-Менделеева):</string>
    <string name="mft_11">Газовые законы. Закон Бойля-Мариотта:</string>
    <string name="mft_12">Закон Гей-Люссака:</string>
    <string name="mft_13">Закон Шарля:</string>
    <string name="mft_14">Универсальный газовый закон (Клапейрона):</string>
    <string name="mft_15">Давление смеси газов (закон Дальтона):</string>
    <string name="mft_16">Тепловое расширение тел. Тепловое расширение газов описывается законом Гей-Люссака. Тепловое расширение жидкостей подчиняется следующему закону:</string>
    <string name="mft_17">Для расширения твердых тел применяются три формулы, описывающие изменение линейных размеров, площади и объема тела:</string>
    <string name="mft_18">Количество теплоты (энергии) необходимое для нагревания некоторого тела (или количество теплоты выделяющееся при остывании тела) рассчитывается по формуле:</string>
    <string name="mft_19">Теплоемкость (С - большое) тела может быть рассчитана через удельную теплоёмкость (c - маленькое) вещества и массу тела по следующей формуле:</string>
    <string name="mft_20">Тогда формула для количества теплоты необходимой для нагревания тела, либо выделившейся при остывании тела может быть переписана следующим образом:</string>
    <string name="mft_21">Фазовые превращения. При парообразовании поглощается, а при конденсации выделяется количество теплоты равное:</string>
    <string name="mft_22">При плавлении поглощается, а при кристаллизации выделяется количество теплоты равное:</string>
    <string name="mft_23">При сгорании топлива выделяется количество теплоты равное:</string>
    <string name="mft_24">Работа идеального газа:</string>
    <string name="mft_25">Если же давление газа меняется, то работу газа считают, как площадь фигуры под графиком в p–V координатах. Внутренняя энергия идеального одноатомного газа:</string>
    <string name="mft_26">Изменение внутренней энергии рассчитывается по формуле:</string>
    <string name="mft_27">Первый закон (первое начало) термодинамики (ЗСЭ):</string>
    <string name="mft_28">Для различных изопроцессов можно выписать формулы по которым могут быть рассчитаны полученная теплота Q, изменение внутренней энергии ΔU и работа газа A. Изохорный процесс (V = const):</string>
    <string name="mft_29">Изобарный процесс (p = const):</string>
    <string name="mft_30">Изотермический процесс (T = const):</string>
    <string name="mft_31">Адиабатный процесс (Q = 0):</string>
</resources>