<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bag">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount,UselessParent"
        android:scrollbars="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_1"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_1"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_2"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_2"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_3"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_3"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_4"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_4"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_5"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_5"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_6"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_6"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_7"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_7"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_8"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_8"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_9"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_9"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_10"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_10"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_11"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_11"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_12"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_12"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_13"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_13"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_14"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_14"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_15"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_15"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_16"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_16"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_17"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_17"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_18"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_18"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_19"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_19"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_20"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_20"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_21"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_21"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_22"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_22"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_23"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_23"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_24"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_24"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_25"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_25"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/din_26"
                android:textColor="@color/white"
                android:textSize="21sp"/>

            <ImageView
                android:layout_marginBottom="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/d_26"
                android:contentDescription="@string/todo" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>